--- a/README
+++ b/README
@@ -16,6 +16,13 @@
 `--------------------------------------'
 * Przekierowanie stdout i stderr na terminal (w celu debugowania)
 
+.--------------------------------------.
+| Tue Mar 11 18:47:32 CET 2014         |
+`--------------------------------------'
+Mar 11 18:29:46 raszpla readtemp.py: conversion failure "invalid literal for float(): 331..00"
+Blad konwersji skutkuje wylaczenie sie daemona
+
+
 NOTES:
 1) Nie przetestowano pobierania danych z serial dla arduino.
 
