Description of DHT11

--- a/README
+++ b/README
@@ -19,12 +19,14 @@ Table of contents:
   2.1. Hardware Requirements
   2.2. Software Requirements
   2.3. Configuration
-  2.3.1. readtemp.py
-  2.3.2. munin/bitcurex.py
-  2.3.3. munin/DHT11
-  2.3.4. munin/polmine
-  2.3.5. munin/cgminer
-  2.3.6. munin/environmental
+  2.3.1. munin/bitcurex.py
+  2.3.2. munin/polmine
+  2.3.3. munin/cgminer
+  2.3.4. readtemp.py
+  2.3.5. munin/DHT11
+  2.3.6. munin/lightlevel
+  2.3.7. munin/noise
+  2.3.8. munin/environmental
   
   3. Development information
   3.1. Introduction
@@ -51,6 +53,7 @@ Table of contents:
                   It's supported on python2.x tested at the moment only on python2.7
       
   2.3. Configuration
+
   2.3.1. readtemp.py
 	readtemp is a python script which runs on python 2.x version 3.x is not supported 
   at the moment. Application reads data in form variable=value <space> ...
@@ -61,7 +64,23 @@ Table of contents:
      -S|--serial_port path to serial device.
      -h|--help        Show usage messaga.
 
+  2.3.2. munin/bitcurex.pl
+	bitcurex.pl python script is a munin script used for drawing munin charts of BTC
+   currency from well-known polish bitcoin stock. No configuration provided at the moment.
 
+  2.3.3. munin/DHT11
+	DHT11 is a python script used for drawing munin charts of humidity percentage from
+   DHT11 sensor connected to raspberryPi (for details inspect fritzing sketch included in
+   git repository and distribution pack).  The sensor itself can read also temperature,
+   however so far it is not supported. Script depends on DHT11 driver developed by
+   adafruit and available in git repository. Also script has to be runned by root (as munin does)
+   or at least with suid. To run script as root following munin configuration
+   has to be added in /etc/munin/munin-node.conf file:
+
+   [DHT11]
+   user root 
+  
+   
 
 
 
